Replace chosenOutputs List<String> with EnumSet<OutputTypes>
Signed-off-by: lisrte <laurent.issertial@rte-france.com>